2006-01-13 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
    * src/ObjectSelector/_IntEdit.py: added int only edit

2006-01-13  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
	* src/PedView.py: Use the same font as used in the gtk style

2006-01-13 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
    * src/ObjectSelector/_ObjectSelectorWindow.py: layout improvements
	* src/ObjectSelector/_PersonPreviewFrame.py: layout improvements
	* src/ObjectSelector/_PersonSearchCriteriaWidget.py: layout improvements

2006-01-12  Don Allingham  <don@gramps-project.org>
	* src/DisplayTabs.py: sub tabs for edit dialogs
	* src/EditFamily.py: family editor integration
	* src/gramps.glade: family editor changes

2006-01-12 Richard Taylor <rjt-gramps@thegrindstone.me.uk>
	* src/ObjectSelector/_ObjectSelectorWindow.py: initial outline of
	ObjectSelector 
	* src/ObjectSelector/_PersonPreviewFrame.py: initial outline of
	ObjectSelector
	* src/ObjectSelector/_PersonSearchCriteriaWidget.py: initial
	outline of ObjectSelector
	
2006-01-12  Alex Roitman  <shura@gramps-project.org>
	* src/ViewManager.py: Connect undo handler to the menu item.
	* src/GrampsDb/_GrampsBSDDB.py: Place reference_map under
	transaction management.
	* src/GrampsDb/_GrampsDbBase.py: reference_map changes.

	* src/GrampsDb/_GrampsDbBase.py, src/GrampsDb/_GrampsBSDDB.py:
	Add Redo capability.

2006-01-11  Alex Roitman  <shura@gramps-project.org>
	* src/Assistant.py: Many changes.
	* src/Exporter.py: Work with new Assistant.
	* src/StartupDialog.py: Work with new Assistant.
	* src/GrampsLogger/_ErrorReportAssistant.py: Work with new Assistant.
	* src/gedcomexport.glade, src/gedcomimport.glade: Move to GrampsDb.

2006-01-11  Don Allingham  <don@gramps-project.org>
	* src/FamilyList.py: call family editor
	* src/StartupDialog.py: pwm in try/except
	* src/gramps.py: don't fail on missing SIG_CHILD
	* src/EditPerson.py: removed unused variable
	* src/EditFamily.py: start of the family editor